--- a/MemeMe/MemeMe/Base.lproj/Main.storyboard
+++ b/MemeMe/MemeMe/Base.lproj/Main.storyboard
@@ -19,10 +19,10 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <imageView userInteractionEnabled="NO" contentMode="scaleAspectFill" horizontalHuggingPriority="251" verticalHuggingPriority="251" translatesAutoresizingMaskIntoConstraints="NO" id="OYe-DM-Tgp">
-                                <rect key="frame" x="40" y="0.0" width="520" height="556"/>
+                                <rect key="frame" x="40" y="64" width="520" height="492"/>
                             </imageView>
                             <textField opaque="NO" clipsSubviews="YES" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" text="TOP" textAlignment="center" minimumFontSize="17" translatesAutoresizingMaskIntoConstraints="NO" id="yZV-VL-ggu">
-                                <rect key="frame" x="0.0" y="28" width="600" height="17"/>
+                                <rect key="frame" x="0.0" y="79" width="600" height="17"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="14"/>
                                 <textInputTraits key="textInputTraits" autocapitalizationType="allCharacters"/>
                             </textField>
@@ -47,22 +47,38 @@
                                     </barButtonItem>
                                 </items>
                             </toolbar>
+                            <toolbar opaque="NO" clearsContextBeforeDrawing="NO" contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="PbU-4C-csr">
+                                <rect key="frame" x="0.0" y="20" width="600" height="44"/>
+                                <items>
+                                    <barButtonItem systemItem="action" id="zjN-DB-ewM">
+                                        <connections>
+                                            <action selector="shareMeme:" destination="BYZ-38-t0r" id="rnM-Tm-KDX"/>
+                                        </connections>
+                                    </barButtonItem>
+                                    <barButtonItem style="plain" systemItem="flexibleSpace" id="qRW-qw-r6M"/>
+                                    <barButtonItem systemItem="cancel" id="dq5-Ol-l1B"/>
+                                </items>
+                            </toolbar>
                         </subviews>
                         <color key="backgroundColor" white="1" alpha="1" colorSpace="custom" customColorSpace="calibratedWhite"/>
                         <constraints>
+                            <constraint firstItem="OYe-DM-Tgp" firstAttribute="top" secondItem="PbU-4C-csr" secondAttribute="bottom" id="BDI-u0-KdP"/>
                             <constraint firstAttribute="trailingMargin" secondItem="vFS-8d-qAS" secondAttribute="trailing" constant="-20" id="BNH-78-kFn"/>
+                            <constraint firstItem="PbU-4C-csr" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" id="CHq-hy-dEL"/>
+                            <constraint firstItem="OYe-DM-Tgp" firstAttribute="top" secondItem="PbU-4C-csr" secondAttribute="bottom" id="FbS-mC-Nou"/>
                             <constraint firstItem="mzf-dh-Xvx" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="Jfn-KZ-6Zw"/>
-                            <constraint firstItem="OYe-DM-Tgp" firstAttribute="top" secondItem="8bC-Xf-vdC" secondAttribute="topMargin" id="OMa-Nt-RWz"/>
-                            <constraint firstItem="yZV-VL-ggu" firstAttribute="top" secondItem="y3c-jy-aDJ" secondAttribute="bottom" constant="8" symbolic="YES" id="Pxc-UZ-eyY"/>
                             <constraint firstItem="vFS-8d-qAS" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="RWL-hQ-QaR"/>
                             <constraint firstItem="vFS-8d-qAS" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="UFf-Kc-xyj"/>
                             <constraint firstItem="OYe-DM-Tgp" firstAttribute="bottom" secondItem="mzf-dh-Xvx" secondAttribute="top" id="ZJF-uh-J3u"/>
                             <constraint firstItem="OYe-DM-Tgp" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="20" id="ZME-sh-YaY"/>
                             <constraint firstItem="yZV-VL-ggu" firstAttribute="centerX" secondItem="8bC-Xf-vdC" secondAttribute="centerX" id="aOk-Yt-X0j"/>
+                            <constraint firstItem="PbU-4C-csr" firstAttribute="leading" secondItem="8bC-Xf-vdC" secondAttribute="leadingMargin" constant="-20" id="aaj-56-Oax"/>
                             <constraint firstItem="yZV-VL-ggu" firstAttribute="trailing" secondItem="mzf-dh-Xvx" secondAttribute="trailing" id="aqN-NJ-IHJ"/>
                             <constraint firstAttribute="trailingMargin" secondItem="OYe-DM-Tgp" secondAttribute="trailing" constant="20" id="h9q-ha-0gx"/>
                             <constraint firstItem="yZV-VL-ggu" firstAttribute="leading" secondItem="mzf-dh-Xvx" secondAttribute="leading" id="hUa-AH-Ebz"/>
+                            <constraint firstAttribute="trailingMargin" secondItem="PbU-4C-csr" secondAttribute="trailing" constant="-20" id="iq4-Pu-oZv"/>
                             <constraint firstAttribute="trailingMargin" secondItem="mzf-dh-Xvx" secondAttribute="trailing" constant="-20" id="lkD-OY-v4J"/>
+                            <constraint firstItem="yZV-VL-ggu" firstAttribute="top" secondItem="PbU-4C-csr" secondAttribute="bottom" constant="15" id="rmg-Lx-cPz"/>
                             <constraint firstItem="wfy-db-euE" firstAttribute="top" secondItem="mzf-dh-Xvx" secondAttribute="bottom" id="v24-Wb-nZq"/>
                             <constraint firstItem="mzf-dh-Xvx" firstAttribute="top" secondItem="vFS-8d-qAS" secondAttribute="bottom" constant="10" id="zS9-t6-pse"/>
                         </constraints>
@@ -76,7 +92,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="305" y="368"/>
+            <point key="canvasLocation" x="297" y="355"/>
         </scene>
     </scenes>
 </document>
